Fixed versioning + fixed launch issues