@@ -1,3 +1,4 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 
 plugins {
@@ -12,12 +13,12 @@ eclipse.project.name = appName + '-core'
 
 dependencies {
   // Canopy
-  api "io.github.canopyengine:canopy-core:$canopyVersion"
-  api "io.github.canopyengine:canopy-app:$canopyVersion"
-  api "io.github.canopyengine:canopy-data:$canopyVersion"
-  api "io.github.canopyengine:canopy-physics:$canopyVersion"
-  api "io.github.canopyengine:canopy-graphics:$canopyVersion"
-  api "io.github.canopyengine:canopy-input:$canopyVersion"
+  implementation "io.github.canopyengine:canopy-core:$canopyVersion"
+  implementation "io.github.canopyengine:canopy-app:$canopyVersion"
+  implementation "io.github.canopyengine:canopy-data:$canopyVersion"
+  implementation "io.github.canopyengine:canopy-physics:$canopyVersion"
+  implementation "io.github.canopyengine:canopy-graphics:$canopyVersion"
+  implementation "io.github.canopyengine:canopy-input:$canopyVersion"
   testApi "io.github.canopyengine:canopy-test:$canopyVersion"
 
   // Logging
@@ -33,73 +34,6 @@ dependencies {
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.0"
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.0"
   testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
-  testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-  testRuntimeOnly "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-  // Box2D
-  testImplementation("com.badlogicgames.gdx:gdx-box2d:$gdxVersion")
-  testRuntimeOnly("com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop")
-  // Required to load natives in tests
-  testImplementation("com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion")
-  // KTX & LibGDX
-//  api "com.badlogicgames.ashley:ashley:$ashleyVersion"
-//  api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
-//  api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
-//  api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-//  api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-//  api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-//  api "com.badlogicgames.gdx:gdx:$gdxVersion"
-//  api "com.bladecoder.ink:blade-ink:$bladeInkVersion"
-//  api "com.crashinvaders.lml:gdx-autumn-mvc:$lmlVersion"
-//  api "com.crashinvaders.lml:gdx-autumn:$lmlVersion"
-//  api "com.crashinvaders.lml:gdx-kiwi:$lmlVersion"
-//  api "com.crashinvaders.lml:gdx-lml:$lmlVersion"
-//  api "com.crashinvaders.vfx:gdx-vfx-core:$gdxVfxCoreVersion"
-//  api "com.crashinvaders.vfx:gdx-vfx-effects:$gdxVfxEffectsVersion"
-//  api "com.github.crykn.guacamole:core:$guacamoleVersion"
-//  api "com.github.crykn.guacamole:gdx:$guacamoleVersion"
-//  api "com.github.czyzby:noise4j:$noise4jVersion"
-//  api "com.github.tommyettinger:anim8-gdx:$anim8Version"
-//  api "com.github.tommyettinger:regexodus:$regExodusVersion"
-//  api "com.kotcrab.vis:vis-ui:$visUiVersion"
-//  api "com.rafaskoberg.gdx:typing-label:$typingLabelVersion"
-//  api "com.squidpony:squidlib-extra:$squidlibExtraVersion"
-//  api "com.squidpony:squidlib-util:$squidlibUtilVersion"
-//  api "com.squidpony:squidlib:$squidlibVersion"
-//  api "de.golfgl.gdxcontrollerutils:gdx-controllerutils-mapping:$controllerMappingVersion"
-//  api "io.github.libktx:ktx-actors:$ktxVersion"
-//  api "io.github.libktx:ktx-ai:$ktxVersion"
-//  api "io.github.libktx:ktx-app:$ktxVersion"
-//  api "io.github.libktx:ktx-artemis:$ktxVersion"
-//  api "io.github.libktx:ktx-ashley:$ktxVersion"
-//  api "io.github.libktx:ktx-assets-async:$ktxVersion"
-//  api "io.github.libktx:ktx-assets:$ktxVersion"
-//  api "io.github.libktx:ktx-async:$ktxVersion"
-//  api "io.github.libktx:ktx-box2d:$ktxVersion"
-//  api "io.github.libktx:ktx-collections:$ktxVersion"
-//  api "io.github.libktx:ktx-freetype-async:$ktxVersion"
-//  api "io.github.libktx:ktx-freetype:$ktxVersion"
-//  api "io.github.libktx:ktx-graphics:$ktxVersion"
-//  api "io.github.libktx:ktx-i18n:$ktxVersion"
-//  api "io.github.libktx:ktx-inject:$ktxVersion"
-//  api "io.github.libktx:ktx-json:$ktxVersion"
-//  api "io.github.libktx:ktx-log:$ktxVersion"
-//  api "io.github.libktx:ktx-math:$ktxVersion"
-//  api "io.github.libktx:ktx-preferences:$ktxVersion"
-//  api "io.github.libktx:ktx-reflect:$ktxVersion"
-//  api "io.github.libktx:ktx-scene2d:$ktxVersion"
-//  api "io.github.libktx:ktx-style:$ktxVersion"
-//  api "io.github.libktx:ktx-tiled:$ktxVersion"
-//  api "io.github.libktx:ktx-vis-style:$ktxVersion"
-//  api "io.github.libktx:ktx-vis:$ktxVersion"
-//  api "io.github.quillraven.fleks:Fleks:$fleksVersion"
-//  api "net.onedaybeard.artemis:artemis-odb:$artemisOdbVersion"
-//  api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-//  api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
-//  api "org.mini2Dx:universal-tween-engine:$universalTweenVersion"
-
-  if(enableGraalNative == 'true') {
-    implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
-  }
 }
 
 ktlint {
@@ -127,5 +61,16 @@ tasks.named("build") {
 tasks.test {
   useJUnitPlatform() // <- important! tells Gradle to use JUnit 5 platform
 }
+
+tasks.withType(JavaExec).configureEach {
+  jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
+}
+
+java.sourceCompatibility = 17
+java.targetCompatibility = 17
+if (JavaVersion.current().isJava9Compatible()) {
+  compileJava.options.release.set(17)
+}
+kotlin.compilerOptions.jvmTarget.set(JvmTarget.JVM_17)
 
 sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
